--- a/Project07_Student Management/package.json
+++ b/Project07_Student Management/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "abd85-to-do-list",
-  "version": "1.0.1",
-  "description": "A To do list where we can add different items to make a list",
+  "name": "abd85-student-management",
+  "version": "1.0.2",
+  "description": "A simple cli based application which can add students, enroll them in given courses and manage their status about id, payfee and many other",
   "main": "index.js",
   "type": "module",
   "bin": "index.js",
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "inquirer": "^9.2.17"
+    "inquirer": "^9.2.20"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7"
