--- a/Project08_Adventure Game/package.json
+++ b/Project08_Adventure Game/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "abd85-to-do-list",
-  "version": "1.0.1",
-  "description": "A To do list where we can add different items to make a list",
+  "name": "abd85-adventure-game",
+  "version": "1.0.0",
+  "description": "A text base adventure game ",
   "main": "index.js",
   "type": "module",
   "bin": "index.js",
