--- a/Project09_CountDown Timer/package.json
+++ b/Project09_CountDown Timer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "abd85-to-do-list",
-  "version": "1.0.1",
-  "description": "A To do list where we can add different items to make a list",
+  "name": "abd85-countdown-timer",
+  "version": "1.0.0",
+  "description": "A cli based countdown timer",
   "main": "index.js",
   "type": "module",
   "bin": "index.js",
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "inquirer": "^9.2.23"
+    "date-fns": "^3.6.0",
+    "inquirer": "^10.1.2"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7"
