--- a/Project10_OOP/package.json
+++ b/Project10_OOP/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "abd85-to-do-list",
-  "version": "1.0.1",
-  "description": "A To do list where we can add different items to make a list",
+  "name": "abd85-oop",
+  "version": "1.0.0",
+  "description": "A cli project which covers the basics of Object oriented programming",
   "main": "index.js",
   "type": "module",
   "bin": "index.js",
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "inquirer": "^9.2.23"
+    "inquirer": "^10.1.2"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/inquirer": "^9.0.7"
   }
 }
